--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,25 +4,35 @@
             Article One  | Shweta Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color:grey;
+            font-family: sans-serif;
+        }
+        </style>
     </head>
     <body>
-        <div>
-            <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            Sep 29, 2016
-        </div>
-        <div>
-            <p>
-                This is the content of my first artcle. This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.
-            </p>
-            <p>
-                This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.
-            </p>
+        <div class="container">
+            <div>
+                <a href="/">Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                Sep 29, 2016
+            </div>
+            <div>
+                <p>
+                    This is the content of my first artcle. This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.
+                </p>
+                <p>
+                    This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.
+                </p>
+            </div>
         </div>
     </body>
 </html>
