--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,20 @@
             Article Two  | Shweta Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color: #313131;
+            font-family: sans-serif;
+            padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -18,11 +30,12 @@
         </div>
         <div>
             <p>
-                This is the content of my second artcle. This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.
+                This is the content of my second artcle.
             </p>
             <p>
-                This is the content of my second artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.This is the content of my first artcle.
+                This is the content of my second artcle.
             </p>
+        </div>
         </div>
     </body>
 </html>
