--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,6 +4,17 @@
             Article Three  | Shweta Sharma
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color: #313131;
+            font-family: sans-serif;
+            padding-top: 60px;
+            padding-left: 20px;
+            padding-right: 20px;
+        }
+        </style>
     </head>
     <body>
         <div>
@@ -13,6 +24,7 @@
         <h3>
             Article Three
         </h3>
+        <div class="container">
         <div>
             Sep 29, 2016
         </div>
@@ -23,6 +35,7 @@
             <p>
                 This is the content of my third artcle.
             </p>
+        </div>
         </div>
     </body>
 </html>
