[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
 	    I have made some local changes.
         </div>
         <script>
-            alert('Hi, T'm javascript!)
+            alert('Hi, T'm javascript!');
         </script>
         
         <script type="text/javascript" src="/ui/main.js">
