[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,9 +12,10 @@
             <br>
             <h3> Take the world's best courses, online</h3>
             <div>
-                Join te top institutes for free
+                Join the top institutes for free
             </div>
             <hr/>
+            <h3> Benifit</h3>
             <div>
                 Learn anything from anywhere
             </div>
