[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
                 Join the top institutes for free
             </div>
             <hr/>
-            <h3> Benifit</h3>
+            <h3> Benefit</h3>
             <div>
                 Learn anything from anywhere
             </div>
