--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
                 Hi! I am shweta and building my first webapp.
             </div>
             <div class="footer">
-                
+                This button <button id="counter">Click me!</button>has been clicked <span id="count">0</span>times.
             </div>
         </div>
         <script>
