[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
                 Join the top institutes for free
             </div>
             <hr/>
-            <h3> Benefit</h3>
+            <h3> Certification</h3>
             <div>
                 Learn anything from anywhere
             </div>
@@ -23,7 +23,7 @@
                 Hi! I am shweta and building my first webapp.
             </div>
             <div class="footer">
-                This button <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
+                <button id="counter">Sign Up!</button>
             </div>
         </div>
         <script>
