[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             </div>
             <hr/>
             <div id='main-text' class="center text-big bold">
-                Hi! I am shweta and building my first webapp.
+                University of Michigan | Stanford | Indian School of Business | Princeton University
             </div>
             <div class="footer">
                 <button id="counter">Sign Up!</button>
