[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
                 Learn anything from anywhere
             </div>
             <hr/>
-            <div id='main-text' class="center text-big bold">
+            <div id='main-text' class="center text-small bold">
                 University of Michigan | Stanford | Indian School of Business | Princeton University
             </div>
             <div class="footer">
