--- a/ui/index.html
+++ b/ui/index.html
@@ -19,8 +19,8 @@
                 Learn anything from anywhere
             </div>
             <hr/>
-            <div id='main-text' class="center text-small bold">
-                University of Michigan | Stanford | Indian School of Business | Princeton University
+            <div id='main-text' class="center text-big bold">
+                JAVA | Python | Ruby on Rails
             </div>
             <div class="footer">
                 <button id="counter">Sign Up!</button>
