[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
             <div id='main-text' class="center text-big bold">
                 JAVA | Python | Ruby on Rails
             </div>
-            <div class="footer">
+            <div class="footer center text-big bold">
                 <button id="counter">Sign Up!</button>
             </div>
         </div>
