--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,13 @@
                 Learn anything from anywhere
             </div>
             <hr/>
+            <input type="text" id="name" placeholder="name"></input>
+            <input type="submit" value="submit"></input>
+            <ul>
+                <li>JAVA</li>
+                <li>Python</li>
+                <li>Ruby on Rails</li>
+            </ul>
             <div id='main-text' class="center text-big bold">
                 JAVA | Python | Ruby on Rails
             </div>
