--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             </div>
             <hr/>
             <input type="text" id="name" placeholder="name"></input>
-            <input type="submit" value="submit"></input>
+            <input type="submit" value="submit" id="submit_btn"></input>
             <ul>
                 <li>JAVA</li>
                 <li>Python</li>
