--- a/ui/index.html
+++ b/ui/index.html
@@ -21,10 +21,8 @@
             <hr/>
             <input type="text" id="name" placeholder="name"></input>
             <input type="submit" value="submit" id="submit_btn"></input>
-            <ul>
-                <li>JAVA</li>
-                <li>Python</li>
-                <li>Ruby on Rails</li>
+            <ul id="namelist">
+ 
             </ul>
             <div id='main-text' class="center text-big bold">
                 JAVA | Python | Ruby on Rails
