[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,13 +19,14 @@
                 Learn anything from anywhere
             </div>
             <hr/>
-            <input type="text" id="name" placeholder="name"></input>
+            
+            <div id='main-text' class="center text-big bold">
+                Enter your trade and see what is available
+                
+                <input type="text" id="name" placeholder="name"></input>
             <input type="submit" value="submit" id="submit_btn"></input>
             <ul id="namelist">
- 
-            </ul>
-            <div id='main-text' class="center text-big bold">
-                JAVA | Python | Ruby on Rails
+                </ul>
             </div>
             <div class="footer center text-big bold">
                 <button id="counter">Sign Up!</button>
