[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             </div>
             <hr/>
             
-            <div id='main-text' class="center text-big bold">
+            <div id='main-text' class="center text-small bold">
                 Enter your trade and see what is available
                 
             </div>
