--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class="footer center text-big bold">
                 <input type="text" id="name" placeholder="name"></input>
-            <input type="submit" value="submit" id="submit_btn"></input>
+                <input type="submit" value="Submit" id="submit_btn"></input>
             <ul id="namelist">
                 </ul>
                 <button id="counter">Sign Up!</button>
