[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,13 @@
                 Learn anything from anywhere
             </div>
             <hr/>
+            <h3> Login to unlock awesome features</h3>
+            <div>
+                <input type="text" id="username" placeholder="username" />
+                <input type="password" id="password" />
+                <input type="submit" id="submit_btn">
+            </div>
+            <hr/>
             
             <div id='main-text' class="center text-small bold">
                 Enter your trade and see what is available
